<resources>
    <string name="app_name">TAS</string>

    ///// MAIN /////

    <string name="iniciar">INICIAR</string>
    <string name="continuar">CONTINUAR</string>
    <string name="consultar">CONSULTAR -DESCARGAR</string>
    <string name="volver">VOLVER</string>

    ///// INICIAR //////

    <string name="informacion"> INFORMACION DEL PROYECTO</string>
    <string name="nombre_muestreo">NOMBRE DEL MUESTREO</string>
    <string name="id_transecto">ID del transecto</string>
    <string name="grupo_animal">Grupo de organismos</string>

    ///// MAPA ////////////

    <string name="lat">lat:</string>
    <string name="lon">lon:</string>
    <string name="alt">alt:</string>
    <string name="dis">dis:</string>
    <string name="tim">tim:</string>
    <string name="vel">vel:</string>
    <string name="muestreo">muestreo</string>
    <string name="transecto">transecto</string>
    <string name="s">S:</string>
    <string name="d">D:</string>
    <string name="agregar">Agregar</string>
    <string name="terminar">Terminar</string>
    <string name="taxon">Taxon</string>
    <string name="cantidad">1</string>

</resources>
