<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMapa">

    <LinearLayout
        android:layout_width="326dp"
        android:layout_height="604dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fragment
            android:id="@+id/fragment_mapa"
            android:name="com.tracking.tas.Fragments.FragMapa"
            tools:layout="@layout/fragment_frag_mapa"
            android:layout_width="match_parent"
            android:layout_height="268dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lat" />

            <TextView
                android:id="@+id/tv_latitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0.00000" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lon" />

            <TextView
                android:id="@+id/tv_longitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0.00000" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alt" />

            <TextView
                android:id="@+id/tv_altura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dis" />

            <TextView
                android:id="@+id/tv_distancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0000" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tim" />

            <TextView
                android:id="@+id/tv_tiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0:00" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vel" />

            <TextView
                android:id="@+id/tv_velocidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="107dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_muestreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/muestreo" />

                <TextView
                    android:id="@+id/tv_transecto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transecto" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:text="@string/s" />

                    <TextView
                        android:id="@+id/tv_riqueza"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/d" />

                    <TextView
                        android:id="@+id/tv_densida"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="000" />
                </LinearLayout>

            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorButtonNormal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_taxon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/taxon"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_cantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/cantidad"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:id="@+id/btt_agregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/agregar" />

        <Button
            android:id="@+id/button4"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:text="@string/terminar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>