<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="646dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/LayoutFragmentMain"
            android:layout_width="match_parent"
            android:layout_height="447dp" />

        <LinearLayout
            android:id="@+id/ly_2"
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt1_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="irIniciar"
                android:text="@string/iniciar"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bt2_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/continuar"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bt3_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/consultar"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>